WebKit2 View Gestures: Swipe gesture can track vertical movement instead of horizontal movement https://bugs.webkit.org/show_bug.cgi?id=130441 <rdar://problem/16337279>

Reviewed by Simon Fraser.

* UIProcess/mac/ViewGestureControllerMac.mm:
(WebKit::scrollEventCanBecomeSwipe):
Factor logic that determines if a scroll event can become a swipe
out into scrollEventCanBecomeSwipe.
Use <= instead of < when comparing the axes, because we don't want
to start a swipe on a completely diagonal scroll either (because AppKit
can start tracking a vertical swipe in that case).

(WebKit::ViewGestureController::handleScrollWheelEvent):
(WebKit::ViewGestureController::wheelEventWasNotHandledByWebCore):
Make use of scrollEventCanBecomeSwipe.


Canonical link: https://commits.webkit.org/148453@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165903 268f45cc-cd09-0410-ab3c-d52691b4dbfc